--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>BS Wahl</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/69836dacc4.js" crossorigin="anonymous" async></script>
-    <link href="img/favicon.ico" rel="icon">
+    <link href="/img/favicon.ico" rel="icon">
 </head>
 <body>
 
